--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon db --ignore front-js --ignore public/ & webpack --watch"
+    "watch": "nodemon db --ignore font-js --ignore public/ & webpack --watch"
   },
   "keywords": [],
   "author": "",
